changes to suit pep8

--- a/inference-ensemble-3models.ipynb
+++ b/inference-ensemble-3models.ipynb
@@ -131,10 +131,34 @@
    },
    "outputs": [],
    "source": [
+    "import datasets\n",
+    "import logging\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np # linear algebra\n",
+    "import os\n",
+    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+    "import seaborn as sns\n",
     "import tensorflow as tf\n",
     "import tensorflow_hub as hub\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import torch\n",
+    "import transformers\n",
+    "import warnings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "573e43fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datasets import load_dataset, Dataset, DatasetDict\n",
+    "from IPython.display import display, HTML\n",
+    "from scipy.stats import pearsonr\n",
+    "from scipy.stats import spearmanr # pour trouver les correspondances entre les résultats sur des échelles variées\n",
+    "from sklearn.model_selection import StratifiedGroupKFold\n",
+    "from transformers import TrainingArguments,Trainer\n",
+    "from transformers import AutoModelForSequenceClassification,AutoTokenizer"
    ]
   },
   {
@@ -817,94 +841,6 @@
    },
    "source": [
     "# HuggingFace AutoModelForSequenceClassification"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "a7ea6542",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-06-20T21:27:58.589352Z",
-     "iopub.status.busy": "2022-06-20T21:27:58.588667Z",
-     "iopub.status.idle": "2022-06-20T21:27:58.797962Z",
-     "shell.execute_reply": "2022-06-20T21:27:58.797122Z"
-    },
-    "papermill": {
-     "duration": 0.30469,
-     "end_time": "2022-06-20T21:27:58.800869",
-     "exception": false,
-     "start_time": "2022-06-20T21:27:58.496179",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np # linear algebra\n",
-    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
-    "import os\n",
-    "from scipy.stats import pearsonr\n",
-    "from scipy.stats import spearmanr # pour trouver les correspondances entre les résultats sur des échelles variées\n",
-    "from sklearn.model_selection import StratifiedGroupKFold"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "b86d7268",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-06-20T21:27:58.985641Z",
-     "iopub.status.busy": "2022-06-20T21:27:58.985325Z",
-     "iopub.status.idle": "2022-06-20T21:28:02.076990Z",
-     "shell.execute_reply": "2022-06-20T21:28:02.076164Z"
-    },
-    "papermill": {
-     "duration": 3.18658,
-     "end_time": "2022-06-20T21:28:02.079300",
-     "exception": false,
-     "start_time": "2022-06-20T21:27:58.892720",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import transformers\n",
-    "from transformers import TrainingArguments,Trainer\n",
-    "from transformers import AutoModelForSequenceClassification,AutoTokenizer\n",
-    "\n",
-    "import torch\n",
-    "import datasets\n",
-    "from datasets import load_dataset, Dataset, DatasetDict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "0c6fa636",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-06-20T21:28:02.246620Z",
-     "iopub.status.busy": "2022-06-20T21:28:02.246322Z",
-     "iopub.status.idle": "2022-06-20T21:28:02.250418Z",
-     "shell.execute_reply": "2022-06-20T21:28:02.249477Z"
-    },
-    "papermill": {
-     "duration": 0.090353,
-     "end_time": "2022-06-20T21:28:02.252716",
-     "exception": false,
-     "start_time": "2022-06-20T21:28:02.162363",
-     "status": "completed"
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import warnings\n",
-    "import logging\n",
-    "from IPython.display import display, HTML"
    ]
   },
   {
@@ -1711,7 +1647,7 @@
     "idxs = np.arange(len(train))\n",
     "val_idxs = idxs[ is_val]\n",
     "trn_idxs = idxs[~is_val]\n",
-    "len(val_idxs),len(trn_idxs)"
+    "len(val_idxs), len(trn_idxs)"
    ]
   },
   {
@@ -1736,7 +1672,7 @@
    },
    "outputs": [],
    "source": [
-    "dds = DatasetDict({\"train\":tok_ds.select(trn_idxs),\n",
+    "dds = DatasetDict({\"train\": tok_ds.select(trn_idxs),\n",
     "             \"test\": tok_ds.select(val_idxs)})"
    ]
   },
@@ -2504,7 +2440,7 @@
     }
    ],
    "source": [
-    "inps = \"anchor\",\"target\",\"context\",\"context_title\",\"section_title\"\n",
+    "inps = \"anchor\", \"target\", \"context\", \"context_title\", \"section_title\"\n",
     "test_tok_ds = test_ds.map(tok_func, batched=True, remove_columns=inps+('inputs','id','section'))"
    ]
   },
@@ -2832,7 +2768,7 @@
    },
    "outputs": [],
    "source": [
-    "dds = DatasetDict({\"train\":tok_ds.select(trn_idxs),\n",
+    "dds = DatasetDict({\"train\": tok_ds.select(trn_idxs),\n",
     "             \"test\": tok_ds.select(val_idxs)})"
    ]
   },
@@ -3049,7 +2985,7 @@
     }
    ],
    "source": [
-    "test_tok_ds = test_ds.map(tok_func, batched=True, remove_columns=inps+('inputs','id','section'))"
+    "test_tok_ds = test_ds.map(tok_func, batched=True, remove_columns=inps+('inputs', 'id', 'section'))"
    ]
   },
   {
@@ -3314,7 +3250,7 @@
     }
    ],
    "source": [
-    "tok_ds = train_ds.map(tok_func, batched=True, remove_columns=inps+('inputs','id','section'))"
+    "tok_ds = train_ds.map(tok_func, batched=True, remove_columns=inps+('inputs', 'id', 'section'))"
    ]
   },
   {
@@ -3339,7 +3275,7 @@
    },
    "outputs": [],
    "source": [
-    "dds = DatasetDict({\"train\":tok_ds.select(trn_idxs),\n",
+    "dds = DatasetDict({\"train\": tok_ds.select(trn_idxs),\n",
     "             \"test\": tok_ds.select(val_idxs)})"
    ]
   },
@@ -3449,7 +3385,7 @@
     }
    ],
    "source": [
-    "test_tok_ds = test_ds.map(tok_func, batched=True, remove_columns=inps+('inputs','id','section'))"
+    "test_tok_ds = test_ds.map(tok_func, batched=True, remove_columns=inps+('inputs', 'id', 'section'))"
    ]
   },
   {
@@ -3598,7 +3534,7 @@
    },
    "outputs": [],
    "source": [
-    "test_preds = 0.333 * preds_sberta + (0.333) * preds_deberta + (0.333) * preds_mberta"
+    "test_preds = 0.333*preds_sberta + (0.333)*preds_deberta + (0.333)*preds_mberta"
    ]
   },
   {
@@ -4907,11 +4843,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_a8305d862fd240e8bb35a04553b520b9",
-       "max": 37.0,
-       "min": 0.0,
+       "max": 37,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_ac14d5abd1d64bed9938fd57e0316db7",
-       "value": 37.0
+       "value": 37
       }
      },
      "2872e8c9985340c280271e9a206fbd8b": {
@@ -5077,11 +5013,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_4fa028c0ba0f46ac98cb70c22d82c896",
-       "max": 1.0,
-       "min": 0.0,
+       "max": 1,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_3f5325aa44c0456abec848aa1365c23b",
-       "value": 1.0
+       "value": 1
       }
      },
      "3f5325aa44c0456abec848aa1365c23b": {
@@ -5117,11 +5053,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_2e5c21196d2341aaa601d11ade2bdbbb",
-       "max": 37.0,
-       "min": 0.0,
+       "max": 37,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_4f32b72cac174580b2e57199aedc3784",
-       "value": 37.0
+       "value": 37
       }
      },
      "441fa905eed6417aae8df9710e78735d": {
@@ -5336,11 +5272,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_cdcb53a2c89a431594204e005ca1aba2",
-       "max": 1.0,
-       "min": 0.0,
+       "max": 1,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_67eebf4ea9574d68966748c402452f34",
-       "value": 1.0
+       "value": 1
       }
      },
      "5f43b54c6e72480488504662f955d222": {
@@ -6164,11 +6100,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_da4b85f6d62a4757aa3f826a68d38517",
-       "max": 1.0,
-       "min": 0.0,
+       "max": 1,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_4f69c417b3084333b88be1665eb81827",
-       "value": 1.0
+       "value": 1
       }
      },
      "c9850e18155a49c88267908a5e94924f": {
@@ -6423,11 +6359,11 @@
        "description": "",
        "description_tooltip": null,
        "layout": "IPY_MODEL_b1ff89c86967473a9f95f1d5000fa78f",
-       "max": 37.0,
-       "min": 0.0,
+       "max": 37,
+       "min": 0,
        "orientation": "horizontal",
        "style": "IPY_MODEL_441fa905eed6417aae8df9710e78735d",
-       "value": 37.0
+       "value": 37
       }
      },
      "ed37acbadb634e9bab0c86820e6f325f": {
